--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "if-env": "^1.0.0",
     "jest": "^21.2.1",
     "preact-cli": "^2.1.0",
+    "preact-cli-plugin-typescript": "^0.2.2",
     "preact-render-spy": "^1.2.1"
   },
   "dependencies": {
