--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "sourceMap": true,
     "jsx": "react",
     "jsxFactory": "h",
-    "allowJs": true
+    "allowJs": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true
   }
 }
