--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "setupFiles": [
       "<rootDir>/tests/__mocks__/browserMocks.js"
     ],
-    "testRegex": "(/(__tests__|tests)/.*|(\\.|/)(test|spec))\\.jsx?$",
+    "testRegex": "(/(__tests__|tests)/.*|(\\.|/)(test|spec))\\.(js|jsx|ts|tsx)?$",
     "testPathIgnorePatterns": [
       "/node_modules/",
       "<rootDir>/tests/__mocks__/*"
@@ -45,7 +45,9 @@
     "testURL": "http://localhost:8080",
     "moduleFileExtensions": [
       "js",
-      "jsx"
+      "jsx",
+      "ts",
+      "tsx"
     ],
     "moduleDirectories": [
       "node_modules"
