--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "build/*"
   ],
   "devDependencies": {
+    "@types/jest": "^23.3.9",
     "eslint": "^4.9.0",
     "eslint-config-synacor": "^2.0.2",
     "identity-obj-proxy": "^3.0.0",
     "if-env": "^1.0.0",
-    "jest": "^21.2.1",
+    "jest": "^23.3.9",
     "preact-cli": "^2.2.1",
     "preact-cli-plugin-typescript": "^0.2.2",
     "preact-render-spy": "^1.2.1"
