--- a/package.json
+++ b/package.json
@@ -14,7 +14,17 @@
     "test:update": "jest --updateSnapshot"
   },
   "eslintConfig": {
-    "extends": "eslint-config-synacor"
+    "extends": "eslint-config-synacor",
+    "rules": {
+      "indent": [
+        "error",
+        2
+      ],
+      "comma-dangle": [
+        "error",
+        "always"
+      ]
+    }
   },
   "eslintIgnore": [
     "build/*"
