--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint src",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:update": "jest --updateSnapshot"
+    "test:update": "jest --updateSnapshot",
+    "lambda:fx-rates": "ts-node --project lambdas/tsconfig.json lambdas/fx-rates/getFxRates.ts"
   },
   "eslintConfig": {
     "extends": "eslint-config-synacor",
@@ -30,16 +31,23 @@
     "build/*"
   ],
   "devDependencies": {
+    "@types/dotenv": "^6.1.0",
     "@types/jest": "^23.3.9",
+    "@types/node-fetch": "^2.1.4",
+    "dotenv": "^6.2.0",
     "eslint": "^4.9.0",
     "eslint-config-synacor": "^2.0.2",
     "identity-obj-proxy": "^3.0.0",
-    "if-env": "^1.0.0",
+    "if-env": "^1.0.4",
+    "install": "^0.12.2",
     "jest": "^23.3.9",
+    "node-fetch": "^2.3.0",
+    "npm": "^6.4.1",
     "preact-cli": "^2.2.1",
     "preact-cli-plugin-typescript": "^0.2.2",
     "preact-render-spy": "^1.2.1",
-    "ts-jest": "^23.10.4"
+    "ts-jest": "^23.10.4",
+    "ts-node": "^7.0.1"
   },
   "dependencies": {
     "preact": "^8.2.6",
